Updated to use latest LazyMagicMDD and libs.
